fix overflow

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,6 +6,7 @@
 
 body {
   background-color: #354c54;
+  overflow-x: hidden;
 }
 
 .heading {
